Remove remove yang-maven-plugin interfaces
yang2sources.spi package has been deprecated for a long time, remove
it. This will allow us to properly control file lifecycle and perform
correct incremental builds.

JIRA: YANGTOOLS-747
Change-Id: I5e3acf0df97a33e7507841a549fa7109b48c16c3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>